--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
+    "react-motion-grid": "^1.2.3",
+    "react-paginating": "^1.0.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
