--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
     "react": "^16.4.0",
+    "react-animated-css": "^1.0.4",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
     "react-js-pagination": "^3.0.2",
     "react-motion-grid": "^1.2.3",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-transition-group": "^1.2.1",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
